src/scss/partials/popups/_popup.scss
.popup {
  position: fixed!important;
  left: 0;
  top: 0;
  height: 100%;
  max-width: none;
  width: 100%;
  z-index: 3;
  background-color: rgba(0, 0, 0, .3);
  margin: 0;
  padding: 0;
  box-shadow: none;
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.3s 0s, visibility 0s 0.3s;
  overflow: auto;
  /* text-align: center; */
  display: flex;
  /* align-items: center;
  justify-content: center; */

  body.animation-level-0 & {
    transition: none;
  }

  &.active {
    opacity: 1;
    visibility: visible;
    transition: opacity 0.3s 0s, visibility 0s 0s;
    z-index: 4;

    .popup-container {
      transform: translate3d(0, 0, 0);
    }
  }

  &-container {
    position: relative;
    /* max-width: 400px; */
    border-radius: $border-radius-medium;
    background-color: #fff;
    padding: 1rem;
    transform: translate3d(0, -40px, 0);
    backface-visibility: hidden;
    transition-property: transform;
    transition-duration: 0.3s;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    margin: auto;
    
    body.animation-level-0 & {
      transition: none;
    }
  }

  &-centerer {
    margin: auto;
  }

  &-close {
    cursor: pointer;
    color: $color-gray;
    z-index: 3;
    text-align: center;
    justify-self: center;
    line-height: 1;
    transition: color .2s;

    body.animation-level-0 & {
      transition: none;
    }
    
    html.no-touch &:hover {
      color: #000;
    }
  }

  &-header {
    display: flex;
    margin-bottom: 2rem;
    align-items: center;
  }

  &-body {
    flex: 1 1 auto;
    display: flex;
    flex-direction: column;
    overflow: hidden;

    .scrollable {
      position: relative;
    }
  }

  &-buttons {
		display: flex;
		flex-direction: column;
		justify-content: flex-end;
		align-items: flex-end;
		
		.btn {
			background: none;
			outline: none;
      border: none;
      font-weight: 500;
			padding: .5rem;
			text-transform: uppercase;
			transition: .2s;
			border-radius: $border-radius;
			cursor: pointer;
      color: $color-blue;
      position: relative;
      overflow: hidden;
      max-width: 100%;
      white-space: nowrap;
      text-overflow: ellipsis;

      body.animation-level-0 & {
        transition: none;
      }
			
			html.no-touch &:hover {
				background-color: var(--color-gray-hover);
			}
			
			& + .btn {
        margin-top: .5rem;
        text-overflow: ellipsis;
        white-space: nowrap;
        max-width: 286px;
        overflow: hidden;
			}
		}
  }
  
  &.popup-delete-chat {
    .popup-container {
      max-width: 328px;
    }
  }
}

